# Gemini-O1

./: .coverage  .env.example  .env.sample  .gitignore  CLAUDE.md  CoT_test.py  Gemini-O1-Control.py  README.md  beep.py  beep.py.bak  config-file.py  config_file.py  coverage.xml  loading.py  main.py  migrate.py  prompts.md  pyproject.toml  requirements.txt  svglogotemp.txt  test_beep.py  test_client.py  test_gemini_o1.py  thinking.py  thinkinggui.py  utils-file.py  utils_file.py  web_interface.py  workflow_output.txt
.github/workflows/: cd.yml  ci.yml
docs/: api.rst  conf.py  index.rst  introduction.rst
docs/modules/: index.rst  utils.rst
examples/: example_test_client.py  improved_logging.py  network_visualization.html
gemini_o1/: __init__.py
gemini_o1/commands/: command_handlers.py  command_parser.py
gemini_o1/communication/: response.py
gemini_o1/models/: instance.py  network.py
gemini_o1/ui/: cli.py  web_interface.py
gemini_o1/utils/: config.py  health_monitor.py  logging_config.py  prompts.py  rate_limiter.py  retry.py
static/: index.html  script.js  style.css
tests/: test_beep.py  test_gemini_o1.py  test_simple.py
