[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-o1"
version = "0.1.0"
authors = [
  { name="tIVc407" },
]
description = "A Gemini-based network orchestration system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "aiohttp"
]

[project.urls]
"Homepage" = "https://github.com/tIVc407/Gemini-O1"
"Bug Tracker" = "https://github.com/tIVc407/Gemini-O1/issues"
